fix settings tests

--- a/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_settings.yaml
+++ b/src/azure-cli/azure/cli/command_modules/security/tests/latest/recordings/test_security_settings.yaml
@@ -27,7 +27,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Sun, 10 Mar 2024 15:53:42 GMT
+      - Sun, 10 Mar 2024 15:58:10 GMT
       expires:
       - '-1'
       pragma:
@@ -39,9 +39,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '746'
+      - '747'
       x-msedge-ref:
-      - 'Ref A: C6B7CDD31E2A401C894D057FEF0CFB39 Ref B: MRS211050315047 Ref C: 2024-03-10T15:53:41Z'
+      - 'Ref A: E9A0125143B24EA7B236FDEBA94D4886 Ref B: MRS211050313009 Ref C: 2024-03-10T15:58:09Z'
     status:
       code: 200
       message: OK
@@ -75,7 +75,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Sun, 10 Mar 2024 15:53:42 GMT
+      - Sun, 10 Mar 2024 15:58:10 GMT
       expires:
       - '-1'
       pragma:
@@ -87,9 +87,9 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '745'
+      - '746'
       x-msedge-ref:
-      - 'Ref A: 22FCBB31F99349A18C286F99EFDDB047 Ref B: MRS211050313009 Ref C: 2024-03-10T15:53:42Z'
+      - 'Ref A: 22E1CBFE094A40DF81A8E51D0DEA69A6 Ref B: MRS211050314031 Ref C: 2024-03-10T15:58:10Z'
     status:
       code: 200
       message: OK
@@ -123,7 +123,55 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Sun, 10 Mar 2024 15:53:42 GMT
+      - Sun, 10 Mar 2024 15:58:11 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '745'
+      x-msedge-ref:
+      - 'Ref A: A45102FBB32F48D8BCB0CFEDA7ECB17C Ref B: MRS211050314023 Ref C: 2024-03-10T15:58:11Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --alert-sync-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '220'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:11 GMT
       expires:
       - '-1'
       pragma:
@@ -137,8 +185,461 @@ interactions:
       x-ms-ratelimit-remaining-subscription-resource-requests:
       - '744'
       x-msedge-ref:
-      - 'Ref A: 8EF63F9067E34F65AFEC9B076E16BF06 Ref B: MRS211050315017 Ref C: 2024-03-10T15:53:43Z'
+      - 'Ref A: DBD9F7092FF54D0F90336BA99ABDA4C7 Ref B: MRS211050619039 Ref C: 2024-03-10T15:58:12Z'
     status:
       code: 200
       message: OK
+- request:
+    body: '{"kind": "AlertSyncSettings", "properties": {"enabled": true}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '62'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --alert-sync-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '219'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:12 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '249'
+      x-msedge-ref:
+      - 'Ref A: 7272591E3CF3480E861C5C31662CBB13 Ref B: MRS211050619039 Ref C: 2024-03-10T15:58:12Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --alert-sync-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '219'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:14 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '749'
+      x-msedge-ref:
+      - 'Ref A: B6CB020313D942B99C1AE82088E2FCD7 Ref B: MRS211050313031 Ref C: 2024-03-10T15:58:14Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "AlertSyncSettings", "properties": {"enabled": false}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '63'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --alert-sync-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '220'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:15 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '249'
+      x-msedge-ref:
+      - 'Ref A: B6BB400C8FDB476185040BCDBF8DBA63 Ref B: MRS211050313031 Ref C: 2024-03-10T15:58:14Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '213'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:16 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '748'
+      x-msedge-ref:
+      - 'Ref A: 2FB7CE51BFAF4143A4B0F940A90E77CB Ref B: MRS211050315049 Ref C: 2024-03-10T15:58:16Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "DataExportSettings", "properties": {"enabled": true}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '63'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '212'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:17 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '245'
+      x-msedge-ref:
+      - 'Ref A: 27C14A2D386D4648B272D2F7DFE34D63 Ref B: MRS211050315049 Ref C: 2024-03-10T15:58:17Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":true}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '212'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:18 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '744'
+      x-msedge-ref:
+      - 'Ref A: 4767FE3D85394570B97215913665DAA1 Ref B: MRS211050315037 Ref C: 2024-03-10T15:58:18Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "DataExportSettings", "properties": {"enabled": false}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '64'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/MCAS","name":"MCAS","type":"Microsoft.Security/settings","kind":"DataExportSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '213'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:20 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '249'
+      x-msedge-ref:
+      - 'Ref A: 15F8E4D4EA2A478ABE2CDE3773018DA6 Ref B: MRS211050315037 Ref C: 2024-03-10T15:58:19Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: GET
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel","name":"Sentinel","type":"Microsoft.Security/settings","kind":"AlertSyncSettings","properties":{"enabled":false}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '220'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:20 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '743'
+      x-msedge-ref:
+      - 'Ref A: 42DFADF9A4F643A38BDF464A868F26F1 Ref B: MRS211050313045 Ref C: 2024-03-10T15:58:20Z'
+    status:
+      code: 200
+      message: OK
+- request:
+    body: '{"kind": "DataExportSettings", "properties": {"enabled": false}}'
+    headers:
+      Accept:
+      - application/json
+      Accept-Encoding:
+      - gzip, deflate
+      CommandName:
+      - security setting update
+      Connection:
+      - keep-alive
+      Content-Length:
+      - '64'
+      Content-Type:
+      - application/json
+      ParameterSetName:
+      - -n --data-export-settings
+      User-Agent:
+      - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
+    method: PUT
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Security/settings/Sentinel?api-version=2022-05-01
+  response:
+    body:
+      string: '{"error":{"code":"InvalidSettingsInput","message":"Kind doesn''t match
+        the setting"}}'
+    headers:
+      api-supported-versions:
+      - '1.0'
+      cache-control:
+      - no-cache
+      content-length:
+      - '84'
+      content-type:
+      - application/json; charset=utf-8
+      date:
+      - Sun, 10 Mar 2024 15:58:21 GMT
+      expires:
+      - '-1'
+      pragma:
+      - no-cache
+      strict-transport-security:
+      - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
+      x-content-type-options:
+      - nosniff
+      x-ms-ratelimit-remaining-subscription-resource-requests:
+      - '248'
+      x-msedge-ref:
+      - 'Ref A: C55897FA0A4F4DF3876459F3AD50AB2C Ref B: MRS211050313045 Ref C: 2024-03-10T15:58:21Z'
+    status:
+      code: 400
+      message: Bad Request
 version: 1
