update sdk version and update sf_managed_cluster tests

--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -71,7 +71,7 @@ azure-mgmt-search==9.0.0
 azure-mgmt-security==5.0.0
 azure-mgmt-servicebus==8.2.0
 azure-mgmt-servicefabric==1.0.0
-azure-mgmt-servicefabricmanagedclusters==1.0.0
+azure-mgmt-servicefabricmanagedclusters==2.0.0b6
 azure-mgmt-servicelinker==1.2.0b1
 azure-mgmt-sql==4.0.0b15
 azure-mgmt-signalr==2.0.0b1
