{Batch} Update CODEOWNERS  (#27450)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -27,7 +27,7 @@
 /src/azure-cli/azure/cli/command_modules/appservice/ @panchagnula @jsntcy @zhoxing-ms @yanzhudd
 /src/azure-cli/azure/cli/command_modules/aro/ @bennerv @hawkowl @jewzaam @rogbas
 /src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @zhoxing-ms @akshayneema @jsntcy @yanzhudd
-/src/azure-cli/azure/cli/command_modules/batch/ @bgklein @gingi @dpwatrous @paterasMSFT @zhoxing-ms @jsntcy @yanzhudd
+/src/azure-cli/azure/cli/command_modules/batch/ @cRui861 @wanghoppe @dpwatrous @wiboris @zhoxing-ms @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/batchai/ @AlexanderYukhanov
 /src/azure-cli/azure/cli/command_modules/botservice/ @jiaxuwu2021 @luhan2017
 /src/azure-cli/azure/cli/command_modules/cdn/ @jsntcy @kairu-ms @wangzelin007 @necusjz @t-bzhan
