{Core} Bump MSAL to 1.27.0 and pin `pymsalruntime` to 0.14.0 (#28556)

--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -106,7 +106,7 @@ jsondiff==2.0.0
 knack==0.11.0
 MarkupSafe==2.0.1
 msal-extensions==1.0.0
-msal[broker]==1.26.0
+msal[broker]==1.27.0
 msrest==0.7.1
 msrestazure==0.6.4
 oauthlib==3.2.2
@@ -120,6 +120,7 @@ pycomposefile==0.0.30
 pycparser==2.19
 PyGithub==1.55
 PyJWT==2.4.0
+pymsalruntime==0.14.0
 PyNaCl==1.5.0
 pyOpenSSL==24.0.0
 python-dateutil==2.8.0
