--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -49,6 +49,12 @@ aks create:
       nodepool_allowed_host_ports:
         rule_exclusions:
         - option_length_too_long
+      enable_azure_container_storage:
+        rule_exclusions:
+        - option_length_too_long
+      azure_container_storage_nodepools:
+        rule_exclusions:
+        - option_length_too_long
 
 aks enable-addons:
   parameters:
@@ -112,6 +118,15 @@ aks update:
           rule_exclusions:
           - option_length_too_long
       node_os_upgrade_channel:
+        rule_exclusions:
+        - option_length_too_long
+      enable_azure_container_storage:
+        rule_exclusions:
+        - option_length_too_long
+      disable_azure_container_storage:
+        rule_exclusions:
+        - option_length_too_long
+      azure_container_storage_nodepools:
         rule_exclusions:
         - option_length_too_long
 ...
