--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -55,6 +55,9 @@ aks create:
       azure_container_storage_nodepools:
         rule_exclusions:
         - option_length_too_long
+      node_resource_group:
+        rule_exclusions:
+        - parameter_should_not_end_in_resource_group
 
 aks enable-addons:
   parameters:
