--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -106,6 +106,7 @@ jmespath==0.9.5
 jsondiff==2.0.0
 knack==0.11.0
 MarkupSafe==2.0.1
+microsoft-security-utilities==1.0.0b1
 msal-extensions==1.0.0
 msal[broker]==1.27.0
 msrest==0.7.1
