--- a/src/azure-cli/azure/cli/command_modules/cdn/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/cdn/linter_exclusions.yml
@@ -4,9 +4,15 @@ afd profile create:
         origin_response_timeout_seconds:
             rule_exclusions:
             - option_length_too_long
+        user_assigned_identities:
+            rule_exclusions:
+            - option_length_too_long
 afd profile update:
     parameters:
         origin_response_timeout_seconds:
+            rule_exclusions:
+            - option_length_too_long
+        user_assigned_identities:
             rule_exclusions:
             - option_length_too_long
 afd origin create:
