--- a/src/azure-cli/azure/cli/command_modules/vm/tests/latest/recordings/test_capacity_reservation_sharing_profile.yaml
+++ b/src/azure-cli/azure/cli/command_modules/vm/tests/latest/recordings/test_capacity_reservation_sharing_profile.yaml
@@ -138,7 +138,7 @@ interactions:
       - -n -g --sharing-profile -l
       User-Agent:
       - AZURECLI/2.58.0 azsdk-python-core/1.28.0 Python/3.11.8 (Windows-10-10.0.22631-SP0)
-    method: PUT
+    method: PATCH
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_capacity_reservation_sharing_profile000001/providers/Microsoft.Compute/capacityReservationGroups/reservation_group_000003?api-version=2023-09-01
   response:
     body:
