--- a/src/azure-cli/azure/cli/command_modules/cdn/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/cdn/linter_exclusions.yml
@@ -154,9 +154,11 @@ afd rule update:
 afd rule action:
     rule_exclusions:
     - require_wait_command_if_no_wait
+    - no_ids_for_list_commands
 afd rule condition:
     rule_exclusions:
     - require_wait_command_if_no_wait
+    - no_ids_for_list_commands
 afd rule action add:
     parameters:
         preserve_unmatched_path:
