{AFD} Add parameter log-scrubbing for afd profile (#28651)
* gen 2024 api

* rerun UT

* log ut

* update action and condition show

* add log-scrubbing

* fix linter

* linter

* lint

* lint

* lint

* lint

---------

Co-authored-by: Jingnan Xu <jingnanxu@microsoft.com>

--- a/src/azure-cli/azure/cli/command_modules/cdn/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/cdn/linter_exclusions.yml
@@ -154,9 +154,15 @@ afd rule update:
 afd rule action:
     rule_exclusions:
     - require_wait_command_if_no_wait
+afd rule action list:
+    rule_exclusions:
+    - no_ids_for_list_commands
 afd rule condition:
     rule_exclusions:
     - require_wait_command_if_no_wait
+afd rule condition list:
+    rule_exclusions:
+    - no_ids_for_list_commands
 afd rule action add:
     parameters:
         preserve_unmatched_path:
