Include orssrc to config

--- a/src/azure-cli/azure/cli/command_modules/rdbms/config.json
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/config.json
@@ -1,7 +1,7 @@
 {
     "AzureCloud": {
-        "southcentralus": ["ossdev", "osshf", "ossmc"],
-        "northcentralus": ["ossdev", "osshf", "ossmc"],
+        "southcentralus": ["ossdev", "osshf", "ossmc", "ossrc"],
+        "northcentralus": ["ossdev", "osshf", "ossmc", "ossrc"],
         "osshf": {
             "subscriptions": ["4a5d02ab-e0c3-4d39-8031-293ddd4e1875"],
             "privateDnsZoneDomain": "pg.osshf-scus1-a.mscds.com"
@@ -13,6 +13,10 @@
         "ossmc": {
             "subscriptions": ["d4fbfa87-b94d-4b13-906f-97361388c5e4"],
             "privateDnsZoneDomain": "pg.ossmc-scus1-a.mscds.com"
+        },
+        "ossrc": {
+            "subscriptions": ["39c1cf1f-e76a-40cf-8abb-39073761f513"],
+            "privateDnsZoneDomain": "pg.ossrc-scus1-a.mscds.com"
         }
     },
     "AzureChinaCloud": {
