limit workflow target branches

--- a/.github/workflows/BlockPRMerge.yml
+++ b/.github/workflows/BlockPRMerge.yml
@@ -3,6 +3,9 @@ name: Block PR merging on "do-not-merge" label
 on:
   pull_request_target:
     types: [labeled, unlabeled]
+    branches:
+      - main
+      - release
 
 jobs:
   block-merge:
