--- a/.github/workflows/AddPRComment.yml
+++ b/.github/workflows/AddPRComment.yml
@@ -1,6 +1,9 @@
 on:
   pull_request_target:
     types: [opened]
+    branches:
+      - main
+      - release
 
 permissions:
   pull-requests: write
