remove owner from rdbms

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -53,7 +53,7 @@
 /src/azure-cli/azure/cli/command_modules/policyinsights/ @cheggert
 /src/azure-cli/azure/cli/command_modules/privatedns/ @jsntcy @kairu-ms @necusjz
 /src/azure-cli/azure/cli/command_modules/profile/ @jiasli @evelyn-ys @calvinhzy
-/src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @evelyn-ys @DaeunYim @calvinhzy @alanenriqueo
+/src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @evelyn-ys @calvinhzy @alanenriqueo
 /src/azure-cli/azure/cli/command_modules/resource/ @zhoxing-ms @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @calvinhzy
 /src/azure-cli/azure/cli/command_modules/search/ @huangbolun @kairu-ms
