--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "--help"
+                "az sql server create -l East US 2 -g bhavnajha-rg -n testmintlsv3 -u cloudSA -p Yukon12345!"
             ],
             "console": "integratedTerminal",
             "debugOptions": [
@@ -23,7 +23,7 @@
             "name": "Azure CLI Debug (External Console)",
             "type": "python",
             "request": "launch",
-            "stopOnEntry": true,
+            "stopOnEntry": false,
             "python": "${command:python.interpreterPath}",
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
