--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -106,7 +106,7 @@ jmespath==0.9.5
 jsondiff==2.0.0
 knack==0.11.0
 MarkupSafe==2.0.1
-msal-extensions==1.0.0
+msal-extensions==1.2.0b1
 msal[broker]==1.28.0
 msrest==0.7.1
 msrestazure==0.6.4
