--- a/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_data_collection_rules.yaml
+++ b/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_data_collection_rules.yaml
@@ -13,13 +13,13 @@ interactions:
       ParameterSetName:
       - -g -n
       User-Agent:
-      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
+      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11?api-version=2022-06-01
   response:
     body:
-      string: '{"properties":{"immutableId":"dcr-1bb703deeca1470eb93f5a3039dc1a71","dataSources":{"performanceCounters":[{"streams":["Microsoft-InsightsMetrics"],"samplingFrequencyInSeconds":60,"counterSpecifiers":["\\Processor
-        Information(_Total)\\% Processor Time"],"name":"perfCounter01"}]},"destinations":{"logAnalytics":[{"workspaceResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/microsoft.operationalinsights/workspaces/wsn1","workspaceId":"f2efd670-1dc2-413e-946c-6bcadc5890e8","name":"wsn1"}],"azureMonitorMetrics":{"name":"azureMonitorMetrics-default"}},"dataFlows":[{"streams":["Microsoft-InsightsMetrics"],"destinations":["azureMonitorMetrics-default"]}],"provisioningState":"Succeeded"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11","name":"rule11","type":"Microsoft.Insights/dataCollectionRules","etag":"\"2b01490d-0000-0700-0000-65d58b8b0000\"","systemData":{"createdBy":"liwang3@microsoft.com","createdByType":"User","createdAt":"2024-02-21T05:35:06.5449758Z","lastModifiedBy":"liwang3@microsoft.com","lastModifiedByType":"User","lastModifiedAt":"2024-02-21T05:35:06.5449758Z"}}'
+      string: '{"properties":{"immutableId":"dcr-69eb919091294b99a9827a2ef91f4d56","dataSources":{"performanceCounters":[{"streams":["Microsoft-InsightsMetrics"],"samplingFrequencyInSeconds":60,"counterSpecifiers":["\\Processor
+        Information(_Total)\\% Processor Time"],"name":"perfCounter01"}]},"destinations":{"logAnalytics":[{"workspaceResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/microsoft.operationalinsights/workspaces/wsn1","workspaceId":"d8cd7529-0c44-4d52-ac05-79a617c0a2f4","name":"wsn1"}],"azureMonitorMetrics":{"name":"azureMonitorMetrics-default"}},"dataFlows":[{"streams":["Microsoft-InsightsMetrics"],"destinations":["azureMonitorMetrics-default"]}],"provisioningState":"Succeeded"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11","name":"rule11","type":"Microsoft.Insights/dataCollectionRules","etag":"\"0f00e438-0000-0700-0000-661e173a0000\"","systemData":{"createdBy":"liwang3@microsoft.com","createdByType":"User","createdAt":"2024-04-16T06:14:17.0932434Z","lastModifiedBy":"liwang3@microsoft.com","lastModifiedByType":"User","lastModifiedAt":"2024-04-16T06:14:17.0932434Z"}}'
     headers:
       api-supported-versions:
       - 2019-11-01-preview, 2021-04-01, 2021-09-01-preview, 2022-06-01, 2023-03-11,
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Feb 2024 05:35:36 GMT
+      - Tue, 16 Apr 2024 07:22:34 GMT
       expires:
       - '-1'
       pragma:
@@ -47,7 +47,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-msedge-ref:
-      - 'Ref A: D924356AE5F2409C8D72287A516B042F Ref B: MAA201060516051 Ref C: 2024-02-21T05:35:35Z'
+      - 'Ref A: 905A779801CA4CE08051063CD6C1BE79 Ref B: MAA201060514027 Ref C: 2024-04-16T07:22:33Z'
     status:
       code: 200
       message: OK
@@ -65,12 +65,12 @@ interactions:
       ParameterSetName:
       - -g -n --data-collection-rule
       User-Agent:
-      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
+      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"f2efd670-1dc2-413e-946c-6bcadc5890e8","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-02-21T05:20:12.6546168Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-02-21T07:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-02-21T05:20:12.6546168Z","modifiedDate":"2024-02-21T05:34:45.8471622Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e200f035-0000-0700-0000-65d58b750000\""}'
+      string: '{"properties":{"customerId":"d8cd7529-0c44-4d52-ac05-79a617c0a2f4","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-04-16T06:13:02.4926861Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":1.0,"quotaNextResetTime":"2024-04-16T13:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-04-16T06:13:02.4926861Z","modifiedDate":"2024-04-16T06:13:04.4633744Z"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"050157bc-0000-0700-0000-661e16f00000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -79,11 +79,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1026'
+      - '855'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Feb 2024 05:35:38 GMT
+      - Tue, 16 Apr 2024 07:22:36 GMT
       expires:
       - '-1'
       pragma:
@@ -97,18 +97,16 @@ interactions:
       x-content-type-options:
       - nosniff
       x-msedge-ref:
-      - 'Ref A: 16260F7E033E4C87808ED1E976080929 Ref B: MAA201060514029 Ref C: 2024-02-21T05:35:38Z'
-      x-powered-by:
-      - ASP.NET
+      - 'Ref A: 237DEE0C8CED40688F43B9790DD1803C Ref B: MAA201060516025 Ref C: 2024-04-16T07:22:35Z'
     status:
       code: 200
       message: OK
 - request:
-    body: '{"etag": "\"e200f035-0000-0700-0000-65d58b750000\"", "location": "westus",
+    body: '{"etag": "\"050157bc-0000-0700-0000-661e16f00000\"", "location": "westus",
       "properties": {"defaultDataCollectionRuleResourceId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11",
       "features": {"enableLogAccessUsingOnlyResourcePermissions": true}, "publicNetworkAccessForIngestion":
       "Enabled", "publicNetworkAccessForQuery": "Enabled", "retentionInDays": 30,
-      "sku": {"name": "PerGB2018"}, "workspaceCapping": {"dailyQuotaGb": -1.0}}}'
+      "sku": {"name": "PerGB2018"}, "workspaceCapping": {"dailyQuotaGb": 1.0}}}'
     headers:
       Accept:
       - application/json
@@ -119,18 +117,18 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '514'
+      - '513'
       Content-Type:
       - application/json
       ParameterSetName:
       - -g -n --data-collection-rule
       User-Agent:
-      - AZURECLI/2.57.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
+      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"f2efd670-1dc2-413e-946c-6bcadc5890e8","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-02-21T05:20:12.6546168Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-02-21T07:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-02-21T05:20:12.6546168Z","modifiedDate":"2024-02-21T05:35:39.8702134Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e2008936-0000-0700-0000-65d58bab0000\""}'
+      string: '{"properties":{"customerId":"d8cd7529-0c44-4d52-ac05-79a617c0a2f4","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-04-16T06:13:02.4926861Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":1.0,"quotaNextResetTime":"2024-04-16T13:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-04-16T06:13:02.4926861Z","modifiedDate":"2024-04-16T07:22:37.758097Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"0601c95e-0000-0700-0000-661e273e0000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -139,11 +137,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '1026'
+      - '1024'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 21 Feb 2024 05:35:39 GMT
+      - Tue, 16 Apr 2024 07:22:37 GMT
       expires:
       - '-1'
       pragma:
@@ -159,9 +157,7 @@ interactions:
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
       x-msedge-ref:
-      - 'Ref A: 0DD7E353459D4C25BCA84332725F8062 Ref B: MAA201060514029 Ref C: 2024-02-21T05:35:39Z'
-      x-powered-by:
-      - ASP.NET
+      - 'Ref A: B17C72EB134F48109E2606376E1D1022 Ref B: MAA201060516025 Ref C: 2024-04-16T07:22:36Z'
     status:
       code: 200
       message: OK
